--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "bootstrap": "^4.1.0",
-    "gh-pages": "^1.1.0"
+    "gh-pages": "^1.1.0",
+    "firebase": "^4.13.1"
   }
 }
