--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "homepage": "https://behtsa.github.io/axxa-challengue/",
   "dependencies": {
+    "bower": "^1.8.4",
+    "es6-promise": "^4.2.4",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
-    "reactstrap": "^5.0.0-beta.3"
+    "reactstrap": "^5.0.0-beta.3",
+    "recompose": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,7 +24,8 @@
   },
   "devDependencies": {
     "bootstrap": "^4.1.0",
+    "firebase": "^4.13.1",
     "gh-pages": "^1.1.0",
-    "firebase": "^4.13.1"
+    "react-google-maps": "^9.4.5"
   }
 }
